feat: configurar backend para deploy no Render
- CORS agora aceita origens via variável de ambiente CORS_ALLOWED_ORIGINS
- JWT secret configurável via variável de ambiente JWT_SECRET
- Adiciona render.yaml com blueprint de deploy via Docker

https://claude.ai/code/session_01Dg3s1D13ByShEPs1VpKH7w